--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.engarnet.timetree.MainActivity">
+        <activity android:name=".event.EventDetailActivity"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.engarnet.timetree.CalendarActivity" />
-        <activity android:name="com.engarnet.timetree.EventActivity" />
+        <activity android:name=".calendar.CalendarListActivity" />
+        <activity android:name=".event.EventListActivity" />
+        <activity android:name=".event.EventEditActivity" />
     </application>
 
 </manifest>
